# sarif-sample

./: README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  ruff.yml
