[project]
name = "sarif-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ['ALL']
