[project]
name = "sarif-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ['ALL']
